--- a/LogViewer/MainForm.resx
+++ b/LogViewer/MainForm.resx
@@ -126,4 +126,81 @@
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>254, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMIOAADCDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3OiIpt3EiKbdxIim3TyIptwEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIptwsiKbfoIim3/yIpt/8iKbf/Iim3LQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3KSIpt1ciKbdXIim3VyIp
+        t1ciKbdXIim3VyIpt1ciKbdXIim3VyIpt1ciKbdXIim3VyIpt1ciKbdUIim3bCIpt/giKbf/Iim3/yIp
+        t/8iKbc4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt0QiKbf2Iim3/yIp
+        t/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIp
+        t/8iKbf/Iim3/yIptzcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3pCIp
+        t/8iKbfGIim3pSIpt6giKbeoIim3qCIpt6giKbeoIim3qCIpt6giKbeoIim3qCIpt6giKbeoIim3pyIp
+        t7MiKbf7Iim3/yIpt/8iKbf/Iim3NwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAiKbeqIim3/yIpt1EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIim3FyIpt/EiKbf/Iim3/yIpt/8iKbc3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACIpt6giKbf/Iim3VwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAiKbcZIim38SIpt/8iKbf/Iim3/yIptzIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIim3qCIpt/8iKbdXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt1siKbf/Iim31yIpt8giKbf/Iim3eQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbeoIim3/yIpt1cAAAAAAAAAACIptz8iKbexIim3qiIp
+        t6oiKbeqIim3qiIpt6oiKbeqIim3qiIpt6oiKbeqIim38yIpt/giKbcxIim3GiIpt+giKbf/Iim3RgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt6giKbf/Iim3VwAAAAAAAAAAIim3ZCIp
+        t/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3YQAAAAAAAAAAIim3RSIp
+        t/8iKbfoIim3HwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3qCIpt/8iKbdXAAAAAAAA
+        AAAiKbcfIim3WCIpt1UiKbdVIim3VSIpt1UiKbdVIim3UyIpt1QiKbfYIim3/yIpt5EAAAAAAAAAAAAA
+        AAAAAAAAIim3cyIpt/8iKbfBIim3BQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbeoIim3/yIp
+        t1cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3aSIpt/8iKbe/Iim3BQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIim3oyIpt/8iKbeRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIp
+        t6giKbf/Iim3VwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt0MiKbf/Iim34iIp
+        txoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbcJIim3yyIpt/8iKbdgAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIim3qCIpt/8iKbdXAAAAAAAAAAAiKbcIIim3FSIptxQiKbcUIim3FCIptxEiKbcsIim35CIp
+        t/8iKbdWIim3CyIptxEiKbcOIim3DiIptw4iKbcOIim3DyIptwciKbc4Iim38yIpt/ciKbc1AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAiKbeoIim3/yIpt1cAAAAAAAAAACIpt1giKbf2Iim37iIpt+4iKbfuIim37SIp
+        t/ciKbf/Iim3/iIpt+oiKbfuIim36yIpt+kiKbfqIim35yIpt+IiKbflIim36iIpt+UiKbf8Iim3/yIp
+        t8IAAAAAAAAAAAAAAAAAAAAAAAAAACIpt6giKbf/Iim3VwAAAAAAAAAAIim3WCIpt/YiKbfuIim37iIp
+        t+4iKbfuIim37SIpt+siKbfrIim37iIpt+8iKbfZIim3yyIpt8oiKbffIim3/yIpt/EiKbfLIim3zCIp
+        t8kiKbfNIim3cQAAAAAAAAAAAAAAAAAAAAAAAAAAIim3qCIpt/8iKbdXAAAAAAAAAAAiKbcIIim3FSIp
+        txQiKbcUIim3FCIptxQiKbcUIim3FCIptxQiKbcUIim3FSIptwcAAAAAAAAAACIpt1UiKbf/Iim3qgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbeoIim3/yIpt1cAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3VCIp
+        t/8iKbeqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt6giKbf/Iim3VwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAiKbdVIim3/yIpt6oAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3qCIp
+        t/8iKbdXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACIpt1QiKbf/Iim3qgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAiKbeoIim3/yIpt1cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3AyIp
+        twUiKbcFIim3BSIptwUAAAAAIim3WCIpt/8iKberAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACIpt6giKbf/Iim3VwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAiKbeGIim33CIpt9QiKbfUIim31CIpt9MiKbfiIim3/yIpt60AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIim3qCIpt/8iKbdXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACIpt6QiKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf0Iim3RAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbeoIim3/yIpt1cAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIim3oSIpt/8iKbf/Iim3/yIpt/8iKbf/Iim39CIpt0UAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt6giKbf/Iim3VwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbehIim3/yIpt/8iKbf/Iim3/yIpt/QiKbdFAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3qCIpt/8iKbdXAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIpt6EiKbf/Iim3/yIpt/8iKbf0Iim3RQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiKbeqIim3/yIp
+        t1IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIim3niIpt/8iKbf/Iim39CIp
+        t0UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACIp
+        t6MiKbf/Iim3xyIpt6ciKbeqIim3qiIpt6oiKbeqIim3qiIpt6oiKbeqIim3qiIpt6ciKbfgIim3/yIp
+        t/QiKbdFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAIim3QiIpt/UiKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIpt/8iKbf/Iim3/yIp
+        t/8iKbfzIim3RQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAIim3KCIpt1UiKbdVIim3VSIpt1UiKbdVIim3VSIpt1UiKbdVIim3VSIp
+        t1UiKbdVIim3WCIptzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///8H///+B/8AAAf+AAAH/gAAB/4//gf+P/4H/j/+B/4wAAP+MABh/jA
+        A8P4/8Pj+P+H4fjAAAD4wAAA+MAAAPjAAx/4//8f+P//H/j//x/4/8Ef+P/AH/j/wB/4/8A/+P/Af/j/
+        wP/4/8H/+AAD//gAB//8AA////////////8=
+</value>
+  </data>
 </root>
